fix footer alignment

--- a/src/static/css/style.less
+++ b/src/static/css/style.less
@@ -4,6 +4,8 @@
 
 /* general */
 body {
+  padding-left: 20px;
+  padding-right: 20px;
   background: rgb(237,237,237); /* Old browsers */
   background: -moz-linear-gradient(top,  rgba(237,237,237,1) 0%, rgba(246,246,246,1) 53%, rgba(255,255,255,1) 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(237,237,237,1)), color-stop(53%,rgba(246,246,246,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
@@ -23,6 +25,8 @@ img {
 a {
   color: #00B7FF;
 }
+
+footer { margin: 20px 0; }
 
 /* page-level */
 .header h1 {
